--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
         "nikic/fast-route": "^1.3",
         "defuse/php-encryption": "^2.2"
     },
+    "require-dev": {
+        "phpunit/phpunit": "^9.1"
+    },
     "suggest": {
         "cboden/ratchet": "Allow users to use websocket feature"  
     },
